<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PauseFragment">

    <Button
        android:id="@+id/btn_resume"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Resume"
        app:layout_constraintBottom_toTopOf="@id/btn_restart"
        app:layout_constraintLeft_toLeftOf="@id/btn_restart"
        app:layout_constraintRight_toRightOf="@id/btn_restart"
        android:backgroundTint="#4CAF50" />

    <Button
        android:id="@+id/btn_restart"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#F44336"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/Restart" />

    <Button
        android:id="@+id/btn_quit"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#888888"
        android:text="@string/Quit"
        app:layout_constraintTop_toBottomOf="@id/btn_restart"
        app:layout_constraintLeft_toLeftOf="@id/btn_restart"
        app:layout_constraintRight_toRightOf="@id/btn_restart" />

</androidx.constraintlayout.widget.ConstraintLayout>