<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingFragment">

    <TextView
        android:id="@+id/txtVolume"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Volume"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="@id/reset_btn"
        app:layout_constraintRight_toRightOf="@id/reset_btn"
        app:layout_constraintBottom_toTopOf="@id/seekBar"/>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:max="100"
        android:progress="100"
        app:layout_constraintLeft_toLeftOf="@id/reset_btn"
        app:layout_constraintRight_toRightOf="@id/reset_btn"
        app:layout_constraintBottom_toTopOf="@id/reset_btn"/>

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/Default"
        android:backgroundTint="#F44336"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/done_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/Done"
        android:layout_margin="10dp"
        android:backgroundTint="#4CAF50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reset_btn"/>

</androidx.constraintlayout.widget.ConstraintLayout>